--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -64,8 +64,8 @@
   },
   "transactionDeadline": "Срок выполнения транзакции",
   "questionHelperMessages": {
-    "transactionRevertPending": "Ваша транзакция отменится, если цена изменится в неблагоприятную сторону более чем на этот процент.",
-    "transactionRevert": "Ваша транзакция отменится, если она находится в ожидании более указанного времени.",
+    "transactionRevertPending": "Ваша транзакция отменится, если она находится в ожидании более указанного времени.",
+    "transactionRevert": "Ваша транзакция отменится, если цена изменится в неблагоприятную сторону более чем на этот процент.",
     "findTokenBySearching": "Найдите токен с помощью поиска по его названию или символу или вставьте его адрес ниже.",
     "addCustomToken": "Добавьте пользовательский токен.",
     "transactionWillRevert": "Используйте этот инструмент для поиска пар, которые автоматически не отображаются в интерфейсе.",
