--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -3,6 +3,9 @@
   "viewOnHecoInfo": "HecoInfoで見る",
   "MaticInfo": "Maticで見る",
   "mainMenu": {
+    "buyLootBoxes": "ルートボックスを購入する",
+    "hangar": "ハンガー",
+    "asteroidMining": "(A)steroid Mining",
     "home": "ホーム",
     "trade": "交換",
     "liquidity": "プール",
@@ -29,7 +32,7 @@
   },
   "language": "jp",
   "swap": "スワップ",
-  "presentationLink": "http://gateway.pinata.cloud/ipfs/QmS3gYhCphkyDN1GWg3TTqKFdJUCGXTKiGpi6BhSupjpJb/Gravis_presentation_JP.pdf",
+  "presentationLink": "https://gateway.pinata.cloud/ipfs/QmPyzebkCrP7C8R2WhHxnWcoGXoAb6T1dREZHAZkzCUt7F",
   "connect": "接続する",
   "account": "アカウント",
   "learnHowConnect": "接続方法について学ぶ",
