--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -30,7 +30,9 @@
     "NFTFarming": "NFT Фарминг",
     "nftmarket": "NFT Маркет",
     "asteroidMining": "(A)steroid Mining",
-    "captainsIno": "Капитаны INO"
+    "captainsIno": "Капитаны INO",
+    "staking": "Стейкинг GRVX",
+    "farming": "Фарминг"
   },
   "language": "ru",
   "swap": "Обменять",
