--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -30,7 +30,9 @@
     "captainsIno": "Captains INO",
     "docs": "Docs",
     "buyLootBoxes": "Buy Loot Boxes",
-    "hangar": "Hangar"
+    "hangar": "Hangar",
+    "staking": "GRVX Staking",
+    "farms": "Farms"
   },
   "language": "en",
   "swap": "Swap",
@@ -200,5 +202,6 @@
   "buyNFT": "Buy NFT",
   "sellNFT": "Sell NFT",
   "sendNFT": "Send NFT",
-  "NFTFarming": "NFT Farming"
+  "NFTFarming": "NFT Farming",
+  "invalidDecimals": "Invalid decimals"
 }
