--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -31,8 +31,9 @@
     "nftmarket": "NFT Маркет",
     "asteroidMining": "(A)steroid Mining",
     "captainsIno": "Капитаны INO",
+    "farming": "Фарминг",
     "staking": "Стейкинг GRVX",
-    "farming": "Фарминг"
+    "farms": "Фермы"
   },
   "language": "ru",
   "swap": "Обменять",
