--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -31,6 +31,7 @@
     "docs": "Docs",
     "buyLootBoxes": "Buy Loot Boxes",
     "hangar": "Hangar",
+    "farming": "Farming",
     "staking": "GRVX Staking",
     "farms": "Farms"
   },
