--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -4,6 +4,7 @@
   "MaticInfo": "Просмотр в Matic",
   "mainMenu": {
     "buyLootBoxes": "Купить лутбоксы",
+    "dashboard": "Дашборд",
     "hangar": "Ангар",
     "home": "Главная",
     "trade": "Биржа",
@@ -16,7 +17,7 @@
     "pitchDeck": "Pitch Deck",
     "tokenomics": "Tokenomics",
     "analytics": {
-      "analytics": "Аналитика",
+      "analytics": "DEX аналитика",
       "overview": "Обзор",
       "tokens": "Токены",
       "pairs": "Пары",
@@ -28,12 +29,13 @@
       "angelRound": "Angel Round"
     },
     "NFTFarming": "NFT Фарминг",
-    "nftmarket": "NFT Маркет",
+    "nftmarket": "Gmart NFT Маркет",
     "asteroidMining": "(A)steroid Mining",
     "captainsIno": "Капитаны INO",
     "farming": "Фарминг",
     "staking": "Стейкинг GRVX",
-    "farms": "Фермы"
+    "farms": "Фермы",
+    "audit": "Аудит"
   },
   "language": "ru",
   "swap": "Обменять",
@@ -207,5 +209,6 @@
   "nftmarket": "NFT Маркет",
   "asteroidMining": "(A)steroid Mining",
   "captainsIno": "Капитаны INO",
-  "invalidDecimals": "Неверная разрядность"
+  "invalidDecimals": "Неверная разрядность",
+  "Activity": "Рыночная активность"
 }
