Updated menu links

--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -3,9 +3,12 @@
   "viewOnHecoInfo": "View on HecoInfo",
   "MaticInfo": "View on Matic",
   "mainMenu": {
+    "dailyRewards": "Daily Rewards",
+    "getResources": "Get Resources",
+    "leaderboard": "Leaderboard",
     "buyLootBoxes": "Buy Loot Boxes",
-    "hangar": "Hangar",
     "dashboard": "Dashboard",
+    "hangar": "Hangar",
     "home": "Home",
     "trade": "Exchange",
     "liquidity": "Pool",
@@ -25,13 +28,11 @@
     "blog": "Blog",
     "pitchDeck": "Pitch Deck",
     "tokenomics": "Tokenomics",
-    "NFTFarming": "NFT Farming",
+    "NFTFarming": "Big Bang Farming",
     "nftmarket": "Gmart NFT market",
     "asteroidMining": "(A)steroid Mining",
     "captainsIno": "Captains INO",
     "docs": "Docs",
-    "buyLootBoxes": "Buy Loot Boxes",
-    "hangar": "Hangar",
     "farming": "Farming",
     "staking": "GRVX Staking",
     "farms": "Farms",
