--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -206,7 +206,7 @@
   "buyNFT": "Buy NFT",
   "sellNFT": "Sell NFT",
   "sendNFT": "Send NFT",
-  "NFTFarming": "NFT Farming",
+  "NFTFarming": "Big Bang Farming",
   "invalidDecimals": "Invalid decimals",
   "Activity": "Market activity"
 }
