--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -28,7 +28,7 @@
       "bbRound": "Big Bang Round",
       "angelRound": "Angel Round"
     },
-    "NFTFarming": "NFT Фарминг",
+    "NFTFarming": "Big Bang Фарминг",
     "nftmarket": "Gmart NFT Маркет",
     "asteroidMining": "(A)steroid Mining",
     "captainsIno": "Капитаны INO",
@@ -205,7 +205,7 @@
   "buyNFT": "Купить NFT",
   "sellNFT": "Продать NFT",
   "sendNFT": "Отправить NFT",
-  "NFTFarming": "NFT Фарминг",
+  "NFTFarming": "Big Bang Фарминг",
   "nftmarket": "NFT Маркет",
   "asteroidMining": "(A)steroid Mining",
   "captainsIno": "Капитаны INO",
