--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -25,7 +25,7 @@
     "blog": "ブログ",
     "pitchDeck": "ピッチデッキ",
     "tokenomics": "トケノミクス",
-    "NFTFarming": "NFTファーミング",
+    "NFTFarming": "Big Bangファーミング",
     "nftmarket": "Gmart NFTマーケット",
     "captainsIno": "キャプテン INO",
     "docs": "Docs"
@@ -198,6 +198,6 @@
   "buyNFT": "NFTを購入",
   "sellNFT": "NFTを売る",
   "sendNFT": "NFTの送信",
-  "NFTFarming": "NFTファーミング",
+  "NFTFarming": "Big Bangファーミング",
   "invalidDecimals": "小数点以下の値が無効です。"
 }
