--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -30,7 +30,7 @@
     "tokenomics": "Tokenomics",
     "NFTFarming": "Big Bang Farming",
     "nftmarket": "Gmart NFT market",
-    "asteroidMining": "(A)steroid Mining",
+    "asteroidMining": "Evervoid",
     "captainsIno": "Captains INO",
     "docs": "Docs",
     "farming": "Farming",
