--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -30,7 +30,7 @@
     },
     "NFTFarming": "Big Bang Фарминг",
     "nftmarket": "Gmart NFT Маркет",
-    "asteroidMining": "(A)steroid Mining",
+    "asteroidMining": "Evervoid",
     "captainsIno": "Капитаны INO",
     "farming": "Фарминг",
     "staking": "Стейкинг GRVX",
