--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -10,6 +10,7 @@
     "dashboard": "Dashboard",
     "hangar": "Hangar",
     "home": "Home",
+    "craft": "Craft",
     "trade": "Exchange",
     "liquidity": "Pool",
     "migrate": "Migrate",
