--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -3,6 +3,7 @@
   "viewOnHecoInfo": "View on HecoInfo",
   "MaticInfo": "View on Matic",
   "mainMenu": {
+    "firstMates": "First Mates",
     "dailyRewards": "Daily Rewards",
     "getResources": "Get Resources",
     "leaderboard": "Leaderboard",
