--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -207,7 +207,7 @@
   "sendNFT": "Отправить NFT",
   "NFTFarming": "Big Bang Фарминг",
   "nftmarket": "NFT Маркет",
-  "asteroidMining": "(A)steroid Mining",
+  "asteroidMining": "Evervoid",
   "captainsIno": "Капитаны INO",
   "invalidDecimals": "Неверная разрядность",
   "Activity": "Рыночная активность"
