--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -5,7 +5,7 @@
   "mainMenu": {
     "buyLootBoxes": "ルートボックスを購入する",
     "hangar": "ハンガー",
-    "asteroidMining": "(A)steroid Mining",
+    "asteroidMining": "Evervoid",
     "home": "ホーム",
     "trade": "交換",
     "liquidity": "プール",
