--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,4 +1,6 @@
 {
+  "Terms of Use": "Terms of Use",
+  "Privacy Policy": "Privacy Policy",
   "viewOnBscscan": "View on BSCScan",
   "viewOnHecoInfo": "View on HecoInfo",
   "MaticInfo": "View on Matic",
@@ -13,7 +15,7 @@
     "hangar": "Hangar",
     "home": "Home",
     "craft": "Craft",
-    "trade": "Exchange",
+    "trade": "Gswap Exchange",
     "liquidity": "Pool",
     "migrate": "Migrate",
     "analytics": {
