--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -1,4 +1,6 @@
 {
+  "Terms of Use": "Condiciones de uso",
+  "Privacy Policy": "Política de Privacidad",
   "viewOnBscscan": "Ver en BSCScan",
   "viewOnHecoInfo": "Ver en HecoInfo",
   "MaticInfo": "Ver en Matic",
@@ -12,7 +14,7 @@
     "hangar": "Hangar",
     "home": "Hogar",
     "craft": "Artesanía",
-    "trade": "Intercambio",
+    "trade": "Gswap Intercambio",
     "liquidity": "Liquidez",
     "migrate": "Migración",
     "analytics": {
