--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -4,6 +4,7 @@
   "viewOnBscscan": "View on BSCScan",
   "viewOnHecoInfo": "View on HecoInfo",
   "MaticInfo": "View on Matic",
+  "trade": "Exchange",
   "mainMenu": {
     "publicRound": "Public Round",
     "firstMates": "First Mates",
