--- a/public/locales/es.json
+++ b/public/locales/es.json
@@ -4,6 +4,7 @@
   "viewOnBscscan": "Ver en BSCScan",
   "viewOnHecoInfo": "Ver en HecoInfo",
   "MaticInfo": "Ver en Matic",
+  "trade": "Intercambio",
   "mainMenu": {
     "firstMates": "First Mates",
     "dailyRewards": "",
