--- a/public/locales/jp.json
+++ b/public/locales/jp.json
@@ -4,6 +4,7 @@
   "viewOnBscscan": "BSCScanで見る",
   "viewOnHecoInfo": "HecoInfoで見る",
   "MaticInfo": "Maticで見る",
+  "trade": "交換",
   "mainMenu": {
     "buyLootBoxes": "ルートボックスを購入する",
     "hangar": "ハンガー",
