--- a/public/locales/ru.json
+++ b/public/locales/ru.json
@@ -4,6 +4,7 @@
   "viewOnBscscan": "Просмотр в BSCScan",
   "viewOnHecoInfo": "Просмотр в HecoInfo",
   "MaticInfo": "Просмотр в Matic",
+  "trade": "Биржа",
   "mainMenu": {
     "buyLootBoxes": "Купить лутбоксы",
     "dashboard": "Дашборд",
