--- a/public/locales/vie.json
+++ b/public/locales/vie.json
@@ -4,6 +4,7 @@
   "viewOnBscscan": "Xem trên BSCScan",
   "viewOnHecoInfo": "Xem trên HecoInfo",
   "MaticInfo": "Xem trên Matic",
+  "trade": "Trao đổi",
   "mainMenu": {
     "firstMates": "First Mates",
     "dailyRewards": "Thưởng hằng ngày",
